--- a/decidim-core/config/locales/en.yml
+++ b/decidim-core/config/locales/en.yml
@@ -196,7 +196,7 @@ en:
         scope: Scope
         target: Target
       statistics:
-        headline: Current state of %{participatory_process}
+        headline: Current state of "%{participatory_process}"
         global:
           comments_count: Comments
         proposals:
